2025-01 Cumulative Update for Version 2501 (6.1.14)

--- a/buszy/art.html
+++ b/buszy/art.html
@@ -461,26 +461,27 @@
                         <li>
                             <a href="../buszy.html#pinned"><i class="fa-sharp fa-solid fa-thumbtack-angle"
                                     title="Pinned"></i>
-                            </a>
+                                Pinned</a>
                         </li>
 
                         <li>
-                            <a href="nbs.html"><i class="fa-solid fa-location-dot" title="Nearby"></i> </a>
+                            <a href="nbs.html"><i class="fa-solid fa-location-dot" title="Nearby"></i>
+                                Nearby</a>
                         </li>
 
                         <li>
                             <a href="abs.html"><i class="fa-solid fa-magnifying-glass" title="Search"></i>
-                            </a>
+                                Search </a>
                         </li>
 
                         <li>
                             <a href="ann.html"><i class="fa-solid fa-bullhorn" title="Announcements"></i>
-                            </a>
+                                Announcements </a>
                         </li>
 
                         <li>
                             <a href="settings.html"><i class="fa-solid fa-gear" title="Settings"></i>
-                            </a>
+                                Settings </a>
                         </li>
                     </ul>
 
