--- a/buszy/nbs.html
+++ b/buszy/nbs.html
@@ -320,7 +320,7 @@
                     <ul>
                         <li>
                             <a href="../buszy.html#pinned"><i class="fa-sharp fa-solid fa-thumbtack-angle" title="Pinned"></i>
-                                </a>
+                            Pinned</a>
                         </li>
 
                         <li>
@@ -328,18 +328,18 @@
                         </li>
 
                         <li>
-                            <a href="abs.html"><i class="fa-solid fa-magnifying-glass" title="Search"></i>
-                                </a>
+                            <a href="abs.html"><i class="fa-solid fa-magnifying-glass"></i>
+                            Search</a>
                         </li>
 
                         <li>
-                            <a href="ann.html"><i class="fa-solid fa-bullhorn" title="Announcements"></i>
-                                </a>
+                            <a href="ann.html"><i class="fa-solid fa-bullhorn"></i>
+                            Announcements</a>
                         </li>
 
                         <li>
-                            <a href="settings.html"><i class="fa-solid fa-gear" title="Settings"></i>
-                                </a>
+                            <a href="settings.html"><i class="fa-solid fa-gear"></i>
+                            Settings</a>
                         </li>
                     </ul>
 
