--- a/buszy/abs.html
+++ b/buszy/abs.html
@@ -298,28 +298,27 @@
 
                     <ul>
                         <li>
-                            <a href="../buszy.html#pinned"><i class="fa-sharp fa-solid fa-thumbtack-angle"
-                                    title="Pinned"></i>
-                            </a>
+                            <a href="../buszy.html#pinned"><i class="fa-sharp fa-solid fa-thumbtack-angle"></i>
+                                Pinned</a>
                         </li>
 
                         <li>
-                            <a href="nbs.html"><i class="fa-solid fa-location-dot" title="Nearby"></i> </a>
+                            <a href="nbs.html"><i class="fa-solid fa-location-dot"></i> Nearby</a>
                         </li>
 
                         <li>
                             <a href="#" class="active"><i class="fa-solid fa-magnifying-glass"></i>
-                                Search</a>
+                            Search</a>
                         </li>
 
                         <li>
-                            <a href="ann.html"><i class="fa-solid fa-bullhorn" title="Announcements"></i>
-                            </a>
+                            <a href="ann.html"><i class="fa-solid fa-bullhorn"></i>
+                             Announcements</a>
                         </li>
 
                         <li>
-                            <a href="settings.html"><i class="fa-solid fa-gear" title="Settings"></i>
-                            </a>
+                            <a href="settings.html"><i class="fa-solid fa-gear"></i>
+                            Settings</a>
                         </li>
                     </ul>
 
