--- a/buszy/settings.html
+++ b/buszy/settings.html
@@ -277,23 +277,23 @@
 
                     <ul>
                         <li>
-                            <a href="../buszy.html#pinned"><i class="fa-sharp fa-solid fa-thumbtack-angle"
-                                    title="Pinned"></i>
-                            </a>
+                            <a href="../buszy.html#pinned"><i class="fa-sharp fa-solid fa-thumbtack-angle"></i>
+                                Pinned</a>
                         </li>
 
                         <li>
-                            <a href="nbs.html"><i class="fa-solid fa-location-dot" title="Nearby"></i> </a>
+                            <a href="nbs.html"><i class="fa-solid fa-location-dot"></i> Nearby</a>
                         </li>
 
                         <li>
-                            <a href="abs.html"><i class="fa-solid fa-magnifying-glass" title="Search"></i>
-                            </a>
+                            <a href="abs.html"><i class="fa-solid fa-magnifying-glass"></i>
+                                Search</a>
                         </li>
 
                         <li>
-                            <a href="ann.html"><i class="fa-solid fa-bullhorn" title="Announcements"></i>
-                            </a>
+                            <a href="ann.html"><i class="fa-solid fa-bullhorn"></i>
+                                Announcements</a>
+                        </li>
                         </li>
                         <li>
                             <a href="#" class="active"><i class="fa-solid fa-gear"></i>
@@ -356,7 +356,7 @@
                     <li class="list-group-item">
                         <div style="display: flex; gap: 10px; flex-wrap: wrap;">
                             <button id="install-btn" class="btn btn-install">Install App</button>
-                            <button id="update-btn" class="btn btn-install" style="display:none;">Update App</button>
+                            <button id="refresh-btn" class="btn btn-install" style="display:inline-block;">Refresh App</button>
                         </div>
                         <p class="fetch">Install this web app on your device for a better experience.</p>
                     </li>
