2025-01 Cumulative Update for Version 2501 (6.1.15)

--- a/buszy.html
+++ b/buszy.html
@@ -13,8 +13,7 @@
     <meta property="og:image" content="https://i.imgur.com/i8n9KYs.png" />
 
     <link rel="manifest" href="manifest.json">
-    <meta name="theme-color" content="#007bff" media="(prefers-color-scheme: light)">
-    <meta name="theme-color" content="#222b36" media="(prefers-color-scheme: dark)">
+    <meta name="theme-color" content="#007bff">
 
     <link rel="icon" href="img/core-img/favicon.png">
 
