--- a/eicw/eicw.html
+++ b/eicw/eicw.html
@@ -203,7 +203,7 @@
 
                     </div>
 
-                    <ul>
+                    <ul id="scrollableTabs">
                         <li>
                             <a href="eicw.html" class="active">Design System Introduction</a>
                         </li>
