2025-01 Cumulative Update for Version 2501 (6.1.17)

--- a/eicw/btr-1.html
+++ b/eicw/btr-1.html
@@ -266,7 +266,8 @@
                     the current ones are barely a decades old.</p>
 
                   <p style="text-align: justify;">Honestly, each designs and UIs you see in real-life are not entirely
-                    bad. So in this section, I'll bring you through my thought process in redesigning these elements.</p>
+                    bad. So in this section, I'll bring you through my thought process in redesigning these elements.
+                  </p>
                 </div>
               </div>
               <div class="portfolio-filter portfolio-filter-sub mt-3 wow fadeIn" data-wow-delay="100ms"
@@ -274,9 +275,9 @@
                 <a href="#bcr">
                   <button class="btn">Bus Card Reader UI (LTA)</button>
                 </a>
-                <!-- <a href="#staris2">
+                <a href="#staris2">
                   <button class="btn">STARiS 2.0 (SMRT)</button>
-                </a> -->
+                </a>
                 <!-- <a href="#cddbp">
                   <button class="btn">Car Door Display (BPLRT)</button>
                 </a> -->
@@ -354,65 +355,77 @@
             </div>
           </div>
           <hr>
-          <p><i>This section is being updated. Check back soon for more!</i></p>
 
           <!-- Car Door Display (BPLRT) -->
-          <!-- <div class="col-lg-12 wow fadeIn" data-wow-delay="100ms">
+          <div class="col-lg-12 wow fadeIn" data-wow-delay="100ms">
             <div class="info justify-content-center">
 
-              <h2 class="text-center" style="font-size: 30px; font-weight: bold;" id="cddbp">Car Door Display (BPLRT)
+              <h2 class="text-center" style="font-size: 30px; font-weight: bold;" id="staris2">STARiS 2 (SMRT)
               </h2>
-              </h2>
-              <p style="text-align: justify;">The current LCD Screen UIs are alright, but I feel that it should align
-                with
-                the overall Design System. Hence, I have redesigned the UI to match the overall Design System, while
-                retaining most of the elements in the current UI.
+              <p style="text-align: justify;">The current STARiS 2's UI is about 16 years old, and it recently got a
+                minor upgrade, though only for the Next Stop and Station Name Screens. A major redesign is needed to
+                align with the current design used on the R151s, but at the same time I wanted to retain some elements
+                from the current STARiS UI.
               </p>
 
               <div class="row">
                 <div class="column column-pic">
                   <figcaption>
-                    <a href="img-2/bcr-compare-light.png" id="bcrcrc" class="portfolio-img ">
-                      <img src="img-2/bcr-compare-light.png" id="bcrcrc-img" class="img-fluid cp-img" alt="bcrcrc">
+                    <a href="img-2/staris2-D.png" id="staris2-b" class="portfolio-img ">
+                      <img src="img-2/staris2-D.png" id="staris2-b-img" class="img-fluid cp-img" alt="staris2-b">
                     </a>
-                    <p style="text-align: justify;">📸: <br>
-                      - <a
-                        href="//images.squarespace-cdn.com/content/v1/5bcfc8c07a1fbd730b2ba933/1558377402895-3VI3FNHXOZQWI997KRES/MRT+gate+to+tap.jpg">Current
-                        MRT Card Reader</a><br>
-                      - <a href="https://x.com/big_pedestrian/status/1782216274090836184/photo/1">Current Bus Card
-                        Reader (via X)</a>
+                    <p style="text-align: justify;">Revamped STARiS 2.0 UI - <b>Updated</b>
+                      Line
+                      Diagram Layout and <b>New</b> Next Station Interface
                     </p>
                   </figcaption>
                 </div>
 
                 <div class="column column-pic">
                   <figcaption>
-                    <a href="img-2/bcr-tap-light.png" id="bcrtap" class="portfolio-img">
-                      <img src="img-2/bcr-tap-light.png" id="bcrtap-img" class="img-fluid cp-img" alt="bcrtap">
+                    <a href="img-2/staris2-D-stn.png" id="staris2-b" class="portfolio-img ">
+                      <img src="img-2/staris2-D-stn.png" id="staris2-b-img" class="img-fluid cp-img" alt="staris2-b">
                     </a>
+                    <p style="text-align: justify;">Revamped STARiS 2.0 UI - <b>Updated</b>
+                      Station Name Interface
+                    </p>
                   </figcaption>
                 </div>
 
+                <hr>
+
+                <p style="text-align: justify; margin-bottom: 0px; font-weight: bolder; font-size: 25px;">
+                  It's time for a makeover.</p>
+
+                <p style="text-align: justify;">As mentioned, I wanted to retain some elements from the current STARiS
+                  UI,
+                  hence I kept the Line Diagram layout similar to the current one, modernized with a newer Doors Closing
+                  animation and also a simplified Arrival Screen.
+                </p>
+
                 <div class="banner-eicw">
-                  <a href="img-2/btrcr1-light.png" id="btrcr1" class="portfolio-img">
-                    <img src="img-2/btrcr1-light.png" id="btrcr1-img" class="img-fluid" alt="btrcr1"
+                  <a href="img-2/btrcr4-light.png" id="btrcr4" class="portfolio-img">
+                    <img src="img-2/btrcr4-light.png" id="btrcr4-img" class="img-fluid" alt="btrcr4"
                       style="box-shadow: none; border: none;">
                   </a>
 
-                  <a href="img-2/btrcr2-light.png" id="btrcr2" class="portfolio-img">
-                    <img src="img-2/btrcr2-light.png" id="btrcr2-img" class="img-fluid" alt="btrcr2"
+                  <a href="img-2/btrcr5-light.png" id="btrcr5" class="portfolio-img">
+                    <img src="img-2/btrcr5-light.png" id="btrcr5-img" class="img-fluid" alt="btrcr5"
                       style="box-shadow: none; border: none;">
                   </a>
 
-                  <a href="img-2/btrcr3-light.png" id="btrcr3" class="portfolio-img">
-                    <img src="img-2/btrcr3-light.png" id="btrcr3-img" class="img-fluid" alt="btrcr3"
-                      style="box-shadow: none; border: none;">
-                  </a>
+                  <!-- <a href="img-2/btrcr3-light.png" id="btrcr3" class="portfolio-img">
+                  <img src="img-2/btrcr3-light.png" id="btrcr3-img" class="img-fluid" alt="btrcr3"
+                    style="box-shadow: none; border: none;">
+                </a> -->
                 </div>
+
+                <p><i>This section is being updated. Check back soon for more!</i></p>
+
               </div>
 
             </div>
-          </div> -->
+          </div>
 
         </div>
       </div>
