--- a/eicw/eicw-4.html
+++ b/eicw/eicw-4.html
@@ -418,7 +418,7 @@
                     <a href="img-2/staris2-D.png" id="staris2-b" class="portfolio-img ">
                       <img src="img-2/staris2-D.png" id="staris2-b-img" class="img-fluid cp-img" alt="staris2-b">
                     </a>
-                    <p style="text-align: justify;">Revamped STARiS 2.0 UI, on one of the KSFC Trains. <b>Updated</b>
+                    <p style="text-align: justify;">Revamped STARiS 2.0 UI, on most of the KSFC Trains. <b>Updated</b>
                       Line
                       Diagram Layout and <b>New</b> Next Station Interface
                     </p>
