2025-01 Cumulative Update for Version 2501 (6.1.17)

--- a/eicw/btr-1.html
+++ b/eicw/btr-1.html
@@ -420,6 +420,96 @@
                 </a> -->
                 </div>
 
+                <hr>
+
+                <h3 class="text-center" style="font-size: 28px; font-weight: bold; padding-top: 1em;">
+                  Doors Closing Animation
+                </h3>
+
+                <p style="text-align: justify;">The Door Closing Animations pays homage to the countdown, now presented
+                  in a different manner. The two blinking arrow replaces the numbered countdown, giving a more dynamic
+                  feel to
+                  it.
+                </p>
+
+                <div class="video-row">
+                  <figure style="width:100%;">
+                    <video id="eicw2-vid2" autoplay controls controlsList="nodownload" oncontextmenu="return false;"
+                      muted loop playsinline width="100%" class="column-vid">
+                      <source src="img-2/door-old.mp4" type="video/mp4">
+                      Your browser does not support the video tag.
+                    </video>
+                    <figcaption>
+                      <p style="text-align: justify;">Original Doors Closing Animation - Left Screen</p>
+                    </figcaption>
+                  </figure>
+
+                  <figure style="width:100%;">
+                    <video id="eicw2-vid2" autoplay controls controlsList="nodownload" oncontextmenu="return false;"
+                      muted loop playsinline width="100%" class="column-vid">
+                      <source src="img-2/door-old-r.mp4" type="video/mp4">
+                      Your browser does not support the video tag.
+                    </video>
+                    <figcaption>
+                      <p style="text-align: justify;">Original Doors Closing Animation - Right Screen</p>
+                    </figcaption>
+                  </figure>
+                </div>
+
+                <div class="video-row">
+                  <figure style="width:100%;">
+                    <video id="eicw2-vid2" autoplay controls controlsList="nodownload" oncontextmenu="return false;"
+                      muted loop playsinline width="100%" class="column-vid">
+                      <source src="img-2/door-new.mp4" type="video/mp4">
+                      Your browser does not support the video tag.
+                    </video>
+                    <figcaption>
+                      <p style="text-align: justify;">Revamped Doors Closing Animation - Left Screen</p>
+                    </figcaption>
+                  </figure>
+
+                  <figure style="width:100%;">
+                    <video id="eicw2-vid2" autoplay controls controlsList="nodownload" oncontextmenu="return false;"
+                      muted loop playsinline width="100%" class="column-vid">
+                      <source src="img-2/door-new-r.mp4" type="video/mp4">
+                      Your browser does not support the video tag.
+                    </video>
+                    <figcaption>
+                      <p style="text-align: justify;">Revamped Doors Closing Animation - Right Screen</p>
+                    </figcaption>
+                  </figure>
+                </div>
+
+                <hr>
+
+                <h3 class="text-center" style="font-size: 28px; font-weight: bold; padding-top: 1em;">
+                  Arrival Animation
+                </h3>
+
+                <div class="video-row">
+                  <figure style="width:100%;">
+                    <video id="eicw2-vid2" autoplay controls controlsList="nodownload" oncontextmenu="return false;"
+                      muted loop playsinline width="100%" class="column-vid">
+                      <source src="img-2/arr-jurA.mp4" type="video/mp4">
+                      Your browser does not support the video tag.
+                    </video>
+                    <figcaption>
+                      <p style="text-align: justify;">Revamped Arrival Animation Example 1 - Jurong East [A]</p>
+                    </figcaption>
+                  </figure>
+
+                  <figure style="width:100%;">
+                    <video id="eicw2-vid2" autoplay controls controlsList="nodownload" oncontextmenu="return false;"
+                      muted loop playsinline width="100%" class="column-vid">
+                      <source src="img-2/arr-wdl.mp4" type="video/mp4">
+                      Your browser does not support the video tag.
+                    </video>
+                    <figcaption>
+                      <p style="text-align: justify;">Revamped Arrival Animation Example 2 - Woodlands [A]</p>
+                    </figcaption>
+                  </figure>
+                </div>
+
                 <p><i>This section is being updated. Check back soon for more!</i></p>
 
               </div>
