--- a/eicw/btr-1.html
+++ b/eicw/btr-1.html
@@ -490,7 +490,7 @@
                   <figure style="width:100%;">
                     <video id="eicw2-vid2" autoplay controls controlsList="nodownload" oncontextmenu="return false;"
                       muted loop playsinline width="100%" class="column-vid">
-                      <source src="img-2/arr-jurA.mp4" type="video/mp4">
+                      <source src="img-2/arr-jur.mp4" type="video/mp4">
                       Your browser does not support the video tag.
                     </video>
                     <figcaption>
