2026-01 Cumulative Update for Version 2501 (6.1.20)

--- a/buszy/ann.html
+++ b/buszy/ann.html
@@ -214,7 +214,7 @@
                     <ul id="scrollable-tabs">
                         <li>
                             <a href="../buszy.html#pinned"><i class="fa-sharp fa-solid fa-thumbtack-angle"></i>
-                            Pinned</a>
+                                Pinned</a>
                         </li>
 
                         <li>
@@ -223,17 +223,17 @@
 
                         <li>
                             <a href="abs.html"><i class="fa-solid fa-magnifying-glass"></i>
-                            Search</a>
+                                Search</a>
                         </li>
 
                         <li>
                             <a href="ann.html" class="active"><i class="fa-solid fa-bullhorn"></i>
-                            Announcements</a>
+                                Announcements</a>
                         </li>
 
                         <li>
                             <a href="settings.html"><i class="fa-solid fa-gear"></i>
-                            Settings</a>
+                                Settings</a>
                         </li>
                     </ul>
 
@@ -259,6 +259,33 @@
                 <i class="fa-solid fa-bullhorn"></i> Loading train service alerts...
             </div>
             <div class="list-group">
+                <a href="settings.html#refetch-stops"
+                    class="list-group-item list-group-item-action flex-column align-items-start">
+                    <div class="d-flex">
+                        <div>
+                            <h5 class="lg-ann"><i class="fa-solid fa-thumbtack"></i> Bus Stop Description Changes -
+                                January 2026</h5>
+                        </div>
+                    </div>
+                    <p class="mb-1" style="cursor: pointer;">
+                        A few Bus Stop Descriptions (Names) have been updated in January 2026. Do head over to Settings
+                        and re-fetch
+                        your bus stop data to get the most up to date information.</p>
+                </a>
+                <hr>
+                <a href="https://landtransportguru.net/sunday-closure-bplrt-jan-2026/"
+                    class="list-group-item list-group-item-action flex-column align-items-start">
+                    <div class="d-flex">
+                        <div>
+                            <h5 class="lg-ann">Line Closure - BPLRT</h5>
+                            <small class="lg-date">26 Dec 2025</small>
+                        </div>
+                    </div>
+                    <p class="mb-1" style="cursor: pointer;">
+                        A Full-Day Closure of the entire Bukit Panjang LRT Line (BPLRT) will take place on Sunday, 25
+                        January 2026. This is to facilitate the migration of the BPLRT’s Operations Control Centre
+                        (OCC).</p>
+                </a>
                 <a href="https://landtransportguru.net/ccl-degraded-service-jan-apr-26/"
                     class="list-group-item list-group-item-action flex-column align-items-start">
                     <div class="d-flex">
