2026-01 Cumulative Update for Version 2501 (6.1.31)

--- a/buszy.html
+++ b/buszy.html
@@ -367,25 +367,32 @@
             <h2></h2>
             <div class="card-container">
                 <div class="card-bz card-nbs">
-                    <img src="buszy/assets/nbs.png" alt="nbs" class="card-icon" />
+                    <a href="buszy/nbs.html">
+                        <img src="buszy/assets/nbs.png" alt="nbs" class="card-icon" />
+                    </a>
                     <p>Nearby Bus Stops</p>
                     <a href="buszy/nbs.html" class="btn bz-btn btn-2 mt-15"><i class="fa-solid fa-arrow-right"></i></a>
                 </div>
                 <div class="card-bz card-sbs">
-                    <img src="buszy/assets/sbs.png" alt="sbs" class="card-icon" />
+                    <a href="buszy/abs.html">
+                        <img src="buszy/assets/sbs.png" alt="sbs" class="card-icon" />
+                    </a>
                     <p>Search Bus Stops</p>
                     <a href="buszy/abs.html" class="btn bz-btn btn-2 mt-15"><i class="fa-solid fa-arrow-right"></i></a>
                 </div>
                 <div class="card-bz card-ann">
-                    <img src="buszy/assets/ann.png" alt="ann" class="card-icon" />
+                    <a href="buszy/ann.html">
+                        <img src="buszy/assets/ann.png" alt="ann" class="card-icon" />
+                    </a>
                     <p>Announcements</p>
                     <a href="buszy/ann.html" class="btn bz-btn btn-2 mt-15"><i class="fa-solid fa-arrow-right"></i></a>
                 </div>
                 <div class="card-bz card-ann">
-                    <img src="buszy/assets/settings.png" alt="settings" class="card-icon" />
+                    <a href="buszy/settings.html">
+                        <img src="buszy/assets/settings.png" alt="settings" class="card-icon" />
+                    </a>
                     <p>Settings</p>
-                    <a href="buszy/settings.html" class="btn bz-btn btn-2 mt-15"><i
-                            class="fa-solid fa-arrow-right"></i></a>
+                    <a href="buszy/settings.html" class="btn bz-btn btn-2 mt-15"><i class="fa-solid fa-arrow-right"></i></a>
                 </div>
             </div>
         </div>
