--- a/buszy/nbs.html
+++ b/buszy/nbs.html
@@ -122,6 +122,35 @@
         font-weight: bold;
     }
 
+    .btn-rfetch {
+        position: relative;
+        z-index: 1;
+        min-width: 50px;
+        width: 100px;
+        height: 40px;
+        line-height: 40px;
+        font-size: 14px;
+        font-weight: 500;
+        display: inline-block;
+        padding: 0 30px;
+        text-align: center;
+        text-transform: capitalize;
+        color: #fff;
+        border-radius: 60px;
+        transition: all 0.4s cubic-bezier(0.25, 0.46, 0.45, 0.94);
+        border: none;
+        box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.3), 0 4px 12px rgba(0, 0, 0, 0.1);
+        background-color: #bb2d3b;
+    }
+
+    .btn-rfetch:focus,
+    .btn-rfetch:hover {
+        font-weight: 500;
+        background-color: #6d99c0 !important;
+        color: #fff;
+        transform: translateY(-2px);
+    }
+
     @media (max-width: 700px) {
         .bus-stop-info {
             flex-direction: column;
@@ -319,8 +348,9 @@
 
                     <ul id="scrollable-tabs">
                         <li>
-                            <a href="../buszy.html#pinned"><i class="fa-sharp fa-solid fa-thumbtack-angle" title="Pinned"></i>
-                            Pinned</a>
+                            <a href="../buszy.html#pinned"><i class="fa-sharp fa-solid fa-thumbtack-angle"
+                                    title="Pinned"></i>
+                                Pinned</a>
                         </li>
 
                         <li>
@@ -329,17 +359,17 @@
 
                         <li>
                             <a href="abs.html"><i class="fa-solid fa-magnifying-glass"></i>
-                            Search</a>
+                                Search</a>
                         </li>
 
                         <li>
                             <a href="ann.html"><i class="fa-solid fa-bullhorn"></i>
-                            Announcements</a>
+                                Announcements</a>
                         </li>
 
                         <li>
                             <a href="settings.html"><i class="fa-solid fa-gear"></i>
-                            Settings</a>
+                                Settings</a>
                         </li>
                     </ul>
 
