2026-01 Cumulative Update for Version 2501 (6.1.34)

--- a/buszy/ann.html
+++ b/buszy/ann.html
@@ -37,6 +37,12 @@
         height: 10vh;
     }
 
+    body.dark-mode .alert-warning p {
+        color: #ffda6a;
+        font-size: 16px;
+        overflow-wrap: break-word;
+    }
+
     .footer {
         display: none;
     }
