--- a/buszy/ann.html
+++ b/buszy/ann.html
@@ -41,6 +41,7 @@
         color: #ffda6a;
         font-size: 16px;
         overflow-wrap: break-word;
+        line-height: 1.7;
     }
 
     .footer {
